@@ -1,3 +1,7 @@
+2011-01-27  Rik  <octave@nomad.inbox5.com>
+
+	* interpreter/geometry.txi: Add trisurf to documentation.
+
 2011-01-27  John W. Eaton  <jwe@octave.org>
 
 	* interpreter/arith.txi (Rational Approximations): Move here.
